fix word breaks in pre

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -160,6 +160,14 @@ input, textarea, .uneditable-input {
 #promotion-form select {min-height:50px;}
 
 
+pre {
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -pre-wrap; /* ancient Opera */
+  white-space: -o-pre-wrap; /* newer Opera */
+  white-space: pre-wrap; /* Chrome; W3C standard */
+  word-wrap: break-word; /* IE */
+  word-break: normal !important;
+}
 
 /*
 ---------------------------------------------
@@ -2408,6 +2416,7 @@ Rating Stars
   background-image: 
     url(/assets/sold_out.jpg);
 }*/
+
 
 
 
